Grouped routes, reefactored code, fixed swagger UI bugs
